Error Mitigation/MagiCoder/Data/javax_management_remote_rmi/javax_management_remote_rmiOutputResult.txt
Sample: RMIConnectorServer_2
----------------------------------------------------------------
output:
./Data/javax_management_remote_rmi/javaFiles/RMIConnectorServer_2.java:11: error: no suitable constructor found for RMIConnectorServer(no arguments)
            RMIConnectorServer rmiConnectorServer = new RMIConnectorServer();
                                                    ^
    constructor RMIConnectorServer.RMIConnectorServer(JMXServiceURL,Map<String,?>) is not applicable
      (actual and formal argument lists differ in length)
    constructor RMIConnectorServer.RMIConnectorServer(JMXServiceURL,Map<String,?>,MBeanServer) is not applicable
      (actual and formal argument lists differ in length)
    constructor RMIConnectorServer.RMIConnectorServer(JMXServiceURL,Map<String,?>,RMIServerImpl,MBeanServer) is not applicable
      (actual and formal argument lists differ in length)
1 error


================================================================

Sample: RMIConnectorServer_3
----------------------------------------------------------------
output:
./Data/javax_management_remote_rmi/javaFiles/RMIConnectorServer_3.java:8: error: no suitable constructor found for RMIConnectorServer(no arguments)
            server = new RMIConnectorServer();
                     ^
    constructor RMIConnectorServer.RMIConnectorServer(JMXServiceURL,Map<String,?>) is not applicable
      (actual and formal argument lists differ in length)
    constructor RMIConnectorServer.RMIConnectorServer(JMXServiceURL,Map<String,?>,MBeanServer) is not applicable
      (actual and formal argument lists differ in length)
    constructor RMIConnectorServer.RMIConnectorServer(JMXServiceURL,Map<String,?>,RMIServerImpl,MBeanServer) is not applicable
      (actual and formal argument lists differ in length)
1 error


================================================================

